--- a/apps/web/src-tauri/Cargo.toml
+++ b/apps/web/src-tauri/Cargo.toml
@@ -43,3 +43,9 @@ base64 = "0.22"
 
 # Image processing for thumbnails
 image = "0.25"
+
+# MIME type detection
+mime_guess = "2"
+
+# File system access
+tauri-plugin-fs = "2"
