--- a/apps/web/src-tauri/Cargo.toml
+++ b/apps/web/src-tauri/Cargo.toml
@@ -47,5 +47,11 @@ image = "0.25"
 # MIME type detection
 mime_guess = "2"
 
+# Date/time handling
+chrono = { version = "0.4", features = ["serde"] }
+
+# URL encoding
+urlencoding = "2"
+
 # File system access
 tauri-plugin-fs = "2"
