Add sorting, cross-bucket copy/move, metadata display, and folder downloads
- Implement column-based sorting (name, size, modified date) with persistent state
- Add cross-bucket and cross-account copy/move operations with download/upload fallback
- Display expanded metadata details in file preview panel for all files
- Add folder ZIP download capability with progress tracking
- Include loading toasts for copy/move/paste operations

--- a/apps/web/src-tauri/Cargo.toml
+++ b/apps/web/src-tauri/Cargo.toml
@@ -55,3 +55,6 @@ urlencoding = "2"
 
 # File system access
 tauri-plugin-fs = "2"
+
+# ZIP file creation
+zip = { version = "2", default-features = false, features = ["deflate"] }
