--- a/apps/web/src-tauri/Cargo.toml
+++ b/apps/web/src-tauri/Cargo.toml
@@ -56,5 +56,9 @@ urlencoding = "2"
 # File system access
 tauri-plugin-fs = "2"
 
+# Auto-updater
+tauri-plugin-updater = "2"
+tauri-plugin-process = "2"
+
 # ZIP file creation
 zip = { version = "2", default-features = false, features = ["deflate"] }
