--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
   workflow_dispatch:
 
 jobs:
@@ -15,19 +15,19 @@ jobs:
       matrix:
         include:
           - platform: macos-latest
-            args: '--target aarch64-apple-darwin'
+            args: "--target aarch64-apple-darwin"
             name: macOS-arm64
           - platform: macos-latest
-            args: '--target x86_64-apple-darwin'
+            args: "--target x86_64-apple-darwin"
             name: macOS-x64
           - platform: ubuntu-22.04
-            args: ''
+            args: ""
             name: Linux-x64
           - platform: windows-latest
-            args: ''
+            args: ""
             name: Windows-x64
           - platform: windows-latest
-            args: '--target aarch64-pc-windows-msvc'
+            args: "--target aarch64-pc-windows-msvc"
             name: Windows-arm64
 
     runs-on: ${{ matrix.platform }}
@@ -53,7 +53,7 @@ jobs:
       - name: Rust cache
         uses: swatinem/rust-cache@v2
         with:
-          workspaces: './apps/web/src-tauri -> target'
+          workspaces: "./apps/web/src-tauri -> target"
 
       - name: Install frontend dependencies
         run: bun install
@@ -67,7 +67,7 @@ jobs:
         with:
           projectPath: apps/web
           tagName: v__VERSION__
-          releaseName: 'S3 Browser v__VERSION__'
+          releaseName: "S3 Browser v__VERSION__"
           releaseBody: |
             See the assets below to download and install.
 
