--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@bucket-scout/env": "workspace:*",
     "@unpic/react": "^1.0.2",
+    "cmdk": "^1.1.1",
     "dotenv": "catalog:",
     "zod": "catalog:"
   },
