--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-form": "^1.12.3",
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-router": "^1.141.1",
+    "@tanstack/react-virtual": "^3.13.16",
     "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-fs": "^2.4.4",
     "@tauri-apps/plugin-process": "^2.3.1",
