Add one-way folder sync feature with S3 integration
Implements upload-only and download-only sync pairs with change detection,
delete propagation, and sync history tracking. Includes macOS sandbox
entitlements, Tauri dialog plugin, and comprehensive UI for managing sync
operations with preview and progress tracking.

--- a/apps/web/src-tauri/Cargo.toml
+++ b/apps/web/src-tauri/Cargo.toml
@@ -78,3 +78,6 @@ hex = "0.4"
 
 # File system watching (for sync)
 notify = "6.1"
+
+# Native dialogs (folder picker for sync)
+tauri-plugin-dialog = "2"
